# pi-bm280

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  conanfile.py
.github/workflows/: build.yml  diagnostics.yml  docs.yml
.github/workflows/conan/: global.conf
.github/workflows/conan/profiles/: clang  gcc  macos-armv8-clang  msvc  msvc-clang
app/: CMakeLists.txt  main.cpp
doc/: conf.py  index.rst
include/euler/: euler.hpp
scripts/: changed_files.py
src/euler/: CMakeLists.txt  problem_1.cpp
test/: .clang-tidy
test/euler/: CMakeLists.txt  test_problem_1.cpp
